--- a/views/partials/addgame.ejs
+++ b/views/partials/addgame.ejs
@@ -2,8 +2,8 @@
 	<form method="POST" action="/games" class="text-center">
 		<div class="row add-game">
 			<div class="col">
-				<input class="form-control my-3" type="text" name="titleInput" placeholder="Title">
-				<input class="form-control my-3" type="text" name="systemInput" placeholder="System">
+				<input class="form-control my-3" type="text" name="titleInput" placeholder="Title" required>
+				<input class="form-control my-3" type="text" name="systemInput" placeholder="System" required>
 				<input class="form-control my-3" type="text" name="imageUrlInput" placeholder="Cover Art URL">
 				<button class="btn btn-primary btn-block">
 					Add Game
