--- a/views/games/new.ejs
+++ b/views/games/new.ejs
@@ -4,6 +4,8 @@
 
 <%- include("../partials/games/new") %>
 
-<a href="/games">Go Back</a>
+<div class="container">
+	<a href="/games" class="btn btn-secondary btn-sm">Go Back</a>
+</div>
 
 <%- include("../partials/footer") %>
