Associated comments with actual User objects.

--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -30,7 +30,7 @@
 			<% ViewModel.comments.reverse().forEach((c) => { %>
 				<div class="card my-3">
 					<div class="card-header">
-						<%= c.author %>
+						<%= c.author.username %>
 					</div>
 					<div class="card-body">
 						<small>
