--- a/views/partials/comments/new.ejs
+++ b/views/partials/comments/new.ejs
@@ -3,8 +3,7 @@
 		<div class="input-group mb-3">
 			<div class="input-group-prepend">
 				<span class="input-group-text" id="basic-addon1">Comment</span>
-			</div><textarea class="form-control" type="text" name="comment" required>
-			</textarea>
+			</div><input class="form-control" type="text" name="comment" required>
 		</div>
 
 		<button class="btn btn-primary">
