--- a/views/partials/games/new.ejs
+++ b/views/partials/games/new.ejs
@@ -41,7 +41,7 @@
 					<input type="text" class="form-control" name="image" placeholder="(Optional)" required aria-label="Cover Art URL" aria-describedby="basic-addon1">
 				</div>
 				
-				<button class="btn btn-primary btn-md">
+				<button class="btn btn-success btn-md">
 					Add Game
 				</button>
 			</div>
