--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="/landing">Gamezy</a>
+		<a class="navbar-brand" href="/landing">Backlogged</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -14,9 +14,9 @@
 				</li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
-				<% if(CurrentUser) { %>
+				<% if(currentUser) { %>
 				<li class="nav-item">
-					<div class="nav-link disabled">Signed in as <%= CurrentUser.username %></div>
+					<div class="nav-link disabled">Signed in as <%= currentUser.username %></div>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="/logout">Sign Out</a>
