--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -4,8 +4,8 @@
 
 <%- include("../partials/games/edit") %>
 
-<div class="container">
-	<a href="/games/<%= ViewModel._id %>" class="btn btn-secondary btn-sm">Go Back</a>
+<div class="container my-3">
+	<a href="/games/<%= ViewModel._id %>" class="btn btn-secondary btn-sm">Cancel</a>
 </div>
 
 <%- include("../partials/footer") %>
