--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,26 +1,23 @@
-<%- include("partials/header") %>
 
-<div class="container text-center my-5">
-	<h1>
-	Welcome to Gamezy
-	</h1>
-	
-	<div class="row">
-		<div class="col-12 my-5">
-		<a href="/register" class="btn btn-primary btn-lg">
-			Get Started
-		</a>
-		</div>
-		<div class="col-12 my-3">
-		<p>
-			Already have an account?
-		</p>
-		<a href="/login" class="btn btn-primary btn-md">
-			Sign In
-		</a>
+<%- include("partials/header") %>
+	<div class="container text-center my-5">
+		<h1>
+			Welcome to Backlogged
+		</h1>
+		<div class="row">
+			<div class="col-12 my-5">
+				<a href="/register" class="btn btn-primary btn-lg">
+					Get Started
+				</a>
+			</div>
+			<div class="col-12 my-3">
+				<p>
+					Already have an account?
+				</p>
+				<a href="/login" class="btn btn-primary btn-md">
+					Sign In
+				</a>
+			</div>
 		</div>
 	</div>
-</div>
-
-
 <%- include("partials/footer") %>
