--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -4,7 +4,7 @@
 	<div class="container my-5">
 		<div class="row">
 			<div class="my-3 col-12 col-md-6 order-md-last">
-				<img src="<%= ViewModel.image %>" class="game-art img-fluid" alt="Game Art">
+				<img src="<%= ViewModel.image %>" class="game-art img-fluid img-thumbnail" alt="Game Art">
 			</div>
 			<div class="my-3 col-12 col-md-6 order-md-first">
 				<h3>
