--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,23 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<%- include("partials/header") %>
-	<div class="container text-center my-5">
-		<h1>
-			Welcome to Backlogged
-		</h1>
-		<div class="row">
-			<div class="col-12 my-5">
-				<a href="/register" class="btn btn-primary btn-lg">
-					Get Started
-				</a>
-			</div>
-			<div class="col-12 my-3">
-				<p>
-					Already have an account?
-				</p>
-				<a href="/login" class="btn btn-primary btn-md">
-					Sign In
-				</a>
-			</div>
-		</div>
-	</div>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Backlogged</title>
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/landing.css"> <!-- Page Specific -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+</head>
+
+<body>
+	<div id="landing-header">
+ 		<h1>Welcome to Backlogged</h1>
+		<a href="/games" class="btn btn-lg btn-primary my-5">Find your next game</a>
+    </div>
+
+	<ul class="slideshow">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
 <%- include("partials/footer") %>
